force-app/main/default/objects/Lead__c/fields/Presales_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Presales_Comment_History__c</fullName>
    <label>Presales Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>