force-app/main/default/objects/Lead__c/fields/Presales_Last_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Presales_Last_Call_Status__c</fullName>
    <label>Presales Last Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>