force-app/main/default/objects/Lead__c/fields/Presales_Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Presales_Next_Follow_up_Date__c</fullName>
    <label>Presales Next Follow up Date</label>
    <type>DateTime</type>
</CustomField>