force-app/main/default/objects/Lead__c/fields/PresalesManager__c.field-meta.xml
<CustomField>
    <fullName>PresalesManager__c</fullName>
    <description>Used In Site Visit Form</description>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreSalesManager</label>
    <type>Text</type>
</CustomField>