force-app/main/default/objects/Lead__c/fields/Referrer_Address__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Address__c</fullName>
    <label>Referrer Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>