force-app/main/default/objects/Lead__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>