force-app/main/default/objects/Lead__c/fields/Send_Star_Connect__c.field-meta.xml
<CustomField>
    <fullName>Send_Star_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Star Connect</label>
    <type>Checkbox</type>
</CustomField>