force-app/main/default/objects/Lead__c/fields/Show_Chat_Panel__c.field-meta.xml
<CustomField>
    <fullName>Show_Chat_Panel__c</fullName>
    <formula>IF(
    OR(
        Project__r.Name = &quot;Queens Necklace&quot;,
        Project__r.Name = &quot;Regents Park&quot;
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Chat Panel</label>
    <type>Checkbox</type>
</CustomField>