force-app/main/default/objects/Lead__c/fields/Show_Icon__c.field-meta.xml
<CustomField>
    <fullName>Show_Icon__c</fullName>
    <formula>IMAGE(&apos;/resource/fontAwesome/Slds_Icons/action/approval.svg&apos;, &apos;approval&apos;, 40, 40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is used for Testing Purpose to check Icon In formula Field</inlineHelpText>
    <label>Show Icon</label>
    <type>Text</type>
</CustomField>