force-app/main/default/objects/Lead__c/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <label>Source Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>