force-app/main/default/objects/Lead__c/fields/Start_Connect_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Start_Connect_Agent_Name__c</fullName>
    <label>Start Connect Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>