force-app/main/default/objects/Lead__c/fields/Start_Connect_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Connect_Location__c</fullName>
    <label>Start Connect Location</label>
    <type>TextArea</type>
</CustomField>