force-app/main/default/objects/Lead__c/fields/Start_Connect_Response__c.field-meta.xml
<CustomField>
    <fullName>Start_Connect_Response__c</fullName>
    <label>Start Connect Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>