force-app/main/default/objects/Lead__c/fields/Start_Connect_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Start_Connect_Status_Code__c</fullName>
    <label>Start Connect Status Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>