force-app/main/default/objects/Lead__c/fields/Stop_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Stop_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Reminder</label>
    <type>Checkbox</type>
</CustomField>