force-app/main/default/objects/Lead__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>SNP</fullName>
            </value>
            <value>
                <fullName>In Follow-up (Cold)</fullName>
            </value>
            <value>
                <fullName>In Follow-up (Warm)</fullName>
            </value>
            <value>
                <fullName>Visit proposed (Hot)</fullName>
            </value>
            <value>
                <fullName>Visit confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Budget does not match</fullName>
            </value>
            <value>
                <fullName>Location mismatch</fullName>
            </value>
            <value>
                <fullName>Area/Configuration Mismatch</fullName>
            </value>
            <value>
                <fullName>Possession does not match</fullName>
            </value>
            <value>
                <fullName>Booked with someone else</fullName>
            </value>
            <value>
                <fullName>Not answering / responding</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Residential Property Enquiry</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>Commercial Property Enquiry</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Loan Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>