force-app/main/default/objects/Lead__c/fields/Substage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Substage_Reason__c</fullName>
    <label>Substage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Switched Off, Not Reachable, Not Answering</fullName>
            </value>
            <value>
                <fullName>Looking for Smaller configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for bigger configuration/area</fullName>
            </value>
            <value>
                <fullName>Looking for RTMI</fullName>
            </value>
            <value>
                <fullName>Looking for early possession</fullName>
            </value>
            <value>
                <fullName>After Pitched</fullName>
            </value>
            <value>
                <fullName>Before Pitched</fullName>
            </value>
            <value>
                <fullName>Invalid customer contact number</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>Test Enquiry</fullName>
            </value>
            <value>
                <fullName>False Enquiry</fullName>
            </value>
            <value>
                <fullName>Not looking for the property</fullName>
            </value>
            <value>
                <fullName>Abusive Clients</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Booked Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>