force-app/main/default/objects/Lead__c/fields/User_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Active_Status__c</fullName>
    <description>To check if Owner is Active/Inactive</description>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To check if Owner is Active/Inactive</inlineHelpText>
    <label>User Active Status</label>
    <type>Checkbox</type>
</CustomField>