force-app/main/default/objects/Lead__c/fields/Vendor_Company__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Company__c</fullName>
    <label>Vendor Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>