force-app/main/default/objects/Lead__c/fields/Virtual_Number__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Number__c</fullName>
    <label>Virtual Number</label>
    <type>Phone</type>
</CustomField>