force-app/main/default/objects/Lead__c/fields/Visit_Confirmed_Threshold_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Confirmed_Threshold_Date__c</fullName>
    <label>Visit Confirmed Threshold Date</label>
    <type>Date</type>
</CustomField>