force-app/main/default/objects/Lead__c/fields/Visit_Done__c.field-meta.xml
<CustomField>
    <fullName>Visit_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Done</label>
    <type>Checkbox</type>
</CustomField>