force-app/main/default/objects/Lead__c/fields/Walkin_Source__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Source__c</fullName>
    <label>Walkin Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source</valueSetName>
    </valueSet>
</CustomField>