force-app/main/default/objects/Lead__c/fields/WIP_Lead__c.field-meta.xml
<CustomField>
    <fullName>WIP_Lead__c</fullName>
    <formula>IF(
    NOT(OR(
        ISPICKVAL(Stage__c, &quot;Incoming&quot;),
        ISPICKVAL(Stage__c, &quot;Visit Done	&quot;),
        ISPICKVAL(Stage__c, &quot;Lost&quot;)
    )),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP Lead</label>
    <type>Checkbox</type>
</CustomField>