force-app/main/default/objects/Lead__c/validationRules/Channel_partner_CP_project_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Channel_partner_CP_project_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISBLANK( CP_Project__c ),ISBLANK( Channel_Partner__c)), ISPICKVAL(Lead_Source__c , &apos;Channel Partner&apos; ))</errorConditionFormula>
    <errorMessage>Please fill the Channel Partner and CP Project field.</errorMessage>
</ValidationRule>