force-app/main/default/objects/Lead__c/validationRules/Mobile_Compulsory.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Compulsory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK( Mobile__c )
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile Number is Compulsory</errorMessage>
</ValidationRule>