force-app/main/default/objects/Lead__c/validationRules/Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Mobile__c)),
    NOT(REGEX(Mobile__c, &apos;^[0-9]{10}$&apos;))
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile Number should be exactly 10 Digits</errorMessage>
</ValidationRule>