force-app/main/default/objects/Lead__c/validationRules/Phone_Compulsory.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Compulsory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISBLANK(  Phone__c )
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone Number is Compulsory</errorMessage>
</ValidationRule>