force-app/main/default/objects/Lead__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone__c)),
    NOT(REGEX(Phone__c, &apos;^[0-9]{10}$&apos;))
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone Number should be exactly 10 Digits</errorMessage>
</ValidationRule>