force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Master_Source__c</columns>
    <columns>Stage__c</columns>
    <columns>Presale_Next_Follow_up_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Leads</label>
</ListView>