force-app/main/default/objects/Lead__c/listViews/All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Campaign__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Presale_Next_Follow_up_Date__c</columns>
    <columns>Presales_Call_Count__c</columns>
    <columns>IsConverted__c</columns>
    <columns>Mobile__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Lead_Stage__c</field>
        <operation>notEqual</operation>
        <value>Lost</value>
    </filters>
    <label>All Open Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>