force-app/main/default/objects/Lead__c/listViews/Converted_Leads.listView-meta.xml
<ListView>
    <fullName>Converted_Leads</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile__c</columns>
    <columns>IsConverted__c</columns>
    <columns>ConvertedAccountId__c</columns>
    <columns>ConvertedOpportunityId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Converted Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>