force-app/main/default/objects/Lead__c/listViews/Directors_List_View.listView-meta.xml
<ListView>
    <fullName>Directors_List_View</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Master_Source__c</columns>
    <columns>Stage__c</columns>
    <columns>Presale_Next_Follow_up_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Director&apos;s List View</label>
    <sharedTo>
        <group>Directors_Group</group>
    </sharedTo>
</ListView>