force-app/main/default/objects/Lead__c/listViews/Lost_Leads.listView-meta.xml
<ListView>
    <fullName>Lost_Leads</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Sub_Stage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Stage__c</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>Lost Leads</label>
</ListView>