force-app/main/default/objects/Lead__c/listViews/Missed_Follow_ups.listView-meta.xml
<ListView>
    <fullName>Missed_Follow_ups</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Project__c</columns>
    <columns>Presales_Next_Follow_up_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Presales_Next_Follow_up_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Missed Follow ups</label>
</ListView>