force-app/main/default/objects/Lead__c/listViews/Missed_Leads.listView-meta.xml
<ListView>
    <fullName>Missed_Leads</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Is_Serviced__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Presales_Next_Follow_Up_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Presales_Next_Follow_Up_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Lead_Stage__c</field>
        <operation>notContain</operation>
        <value>Visit Done,Lost</value>
    </filters>
    <label>Missed Follow Ups</label>
</ListView>