force-app/main/default/objects/Lead__c/listViews/My_follow_up_Leads.listView-meta.xml
<ListView>
    <fullName>My_follow_up_Leads</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Presales_Next_Follow_up_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Presales_Next_Follow_up_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Upcoming Follow-up Leads</label>
</ListView>