force-app/main/default/objects/Lead__c/listViews/My_Follow_ups_Lined_up.listView-meta.xml
<ListView>
    <fullName>My_Follow_ups_Lined_up</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Presales_Next_Follow_up_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>IsConverted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Follow ups Lined up</label>
</ListView>