force-app/main/default/objects/Lead__c/listViews/My_leads.listView-meta.xml
<ListView>
    <fullName>My_leads</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Stage__c</columns>
    <columns>Master_Source__c</columns>
    <columns>Presale_Next_Follow_up_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My leads</label>
</ListView>