force-app/main/default/objects/Lead__c/listViews/My_Leads_CP.listView-meta.xml
<ListView>
    <fullName>My_Leads_CP</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>First_Name__c</columns>
    <columns>IsConverted__c</columns>
    <columns>Mobile__c</columns>
    <columns>Project__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Leads</label>
</ListView>