force-app/main/default/objects/Lead__c/listViews/My_Lost_Leads.listView-meta.xml
<ListView>
    <fullName>My_Lost_Leads</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Is_Serviced__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Stage__c</columns>
    <columns>Presales_Last_Call_Status__c</columns>
    <columns>Presales_Last_Call_Date__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Stage__c</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>My Lost Leads</label>
</ListView>